feat(zsh, git): Add delta diff viewer, let less scroll with mouse
Git now uses delta for diffs

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,16 @@
 	pager = true
 	decorate = always
 	showbranch = always
+[core]
+	pager = delta
+[delta]
+	plus-style = "syntax #012800"
+	minus-style = "syntax #340001"
+	syntax-theme = OneHalfDark
+	navigate = true
+	side-by-side = true
+[interactive]
+	diffFilter = delta --color-only
 [pull]
 	ff = only
 [diff]
