--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,6 +4,10 @@ email = panat.taranat@gmail.com
 signingkey = 94743F22
 [credential]
 helper = /home/panat/.credential-helper
+[alias]
+graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
+graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)%C(reset)%n%x20%s%n"
+last = log -1 --stat
 [color]
 ui = always
 branch = always
