--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,6 +8,7 @@
 	graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
 	graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)%C(reset)%n%x20%s%n"
 	last = log -1 --stat
+	cherry-pit = "!f() { git rebase -r --onto \"$1\"^ \"$1\"; }; f"
 [color]
 	ui = always
 	branch = always
