--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,8 +1,9 @@
 [user]
 	name = Panat Taranat
 	email = panat.taranat@gmail.com
-	signingkey = 94743F22
+	signingkey = CCACDB1344B8B7EC0B4DD439655CBB5895152028
 [credential]
+	helper = !/usr/bin/gh auth git-credential
 	helper = /home/panat/.credential-helper
 [alias]
 	graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
