git: force ssh, push to new branch

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -44,3 +44,7 @@
 	gpgsign = true
 [init]
 	defaultBranch = main
+[push]
+	default = current
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
